Добавил смысловой заголовок h2 для секции поиска гостиницы. Заменил заголовок на кнопку "Поиск гостиницы в Седоне" (которая должна быть согласно ТЗ)

--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
       </section>
       
       <section class="search">
+        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
         <b>Заинтересовались?</b>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <h2>Поиск гостиницы в Седоне</h2>
+        <button class="button button-search" type="button">Поиск гостиницы в Седоне</button>
         <!-- Здесь будет форма -->
       </section>
       
