--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo">
+      <a class="main-header__logo">
         <img src="img/logo.svg" width="150" height="150" alt="Логотип города Седона">
       </a>
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
-        <li><a href="media.html">Фото и видео</a></li>
-        <li><a href="map.html">Карта штата</a></li>
-        <li><a href="catalog.html">Гостиницы</a></li>
+        <li class="site-navigation__item"><a href="info.html">Информация</a></li>
+        <li class="site-navigation__item"><a href="media.html">Фото и видео</a></li>
+        <li class="site-navigation__item"><a href="map.html">Карта штата</a></li>
+        <li class="site-navigation__item"><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -23,75 +23,75 @@
     <h1 class="visually-hidden">Город Седона</h1>
 
     <section class="promo">
-      <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      <h2 class="promo__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="promo__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
 
 
     <section class="features">
       <h2 class="visually-hidden">Причины</h2>
-      <ul class="features-list">
-        <li class="feature-item-detailed feature-item-real">
-          <h3>Настоящий городок</h3>
-          <p>— №1 —</p>
-          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      <ul class="features__list">
+        <li class="features__item features__item--detailed features__item--real">
+          <h3 class="features__title">Настоящий городок</h3>
+          <p class="features__number">— №1 —</p>
+          <p class="features__description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </li>
-        <li class="feature-subitem feature-subitem-house">
-          <h3>Жильё</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        <li class="features__item features__item--house">
+          <h3 class="features__title">Жильё</h3>
+          <p class="features__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
-        <li class="feature-subitem feature-subitem-food">
-          <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <li class="features__item features__item--food">
+          <h3 class="features__title">Еда</h3>
+          <p class="features__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
-        <li class="feature-subitem feature-subitem-souvenir">
-          <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!</p>
+        <li class="features__item features__item--souvenir">
+          <h3 class="features__title">Сувениры</h3>
+          <p class="features__description">Не только китайского, но и местного производства!</p>
         </li>
-        <li class="feature-item-detailed feature-item-bridge">
-          <h3>Там есть Мост дьявола</h3>
-          <p>— №2 —</p>
-          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        <li class="features__item features__item--detailed features__item--bridge">
+          <h3 class="features__title">Там есть Мост дьявола</h3>
+          <p class="features__number">— №2 —</p>
+          <p class="features__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </li>
-        <li class="feature-item-brief">
-          <h3>Небольшая площадь</h3>
-          <p>— №3 —</p>
-          <p>Все достопримечательности находятся очень близко</p>
+        <li class="features__item features__item--brief">
+          <h3 class="features__title">Небольшая площадь</h3>
+          <p class="features__number">— №3 —</p>
+          <p class="features__description">Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="feature-item-brief">
-          <h3>Красивая дорога</h3>
-          <p>— №4 —</p>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        <li class="features__item features__item--brief">
+          <h3 class="features__title">Красивая дорога</h3>
+          <p class="features__number">— №4 —</p>
+          <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="feature-item-brief">
-          <h3>Мало туристов</h3>
-          <p>— №5 —</p>
-          <p>Большинство едет в гранд каньон и толпится там</p>
+        <li class="features__item features__item--brief">
+          <h3 class="features__title">Мало туристов</h3>
+          <p class="features__number">— №5 —</p>
+          <p class="features__description">Большинство едет в гранд каньон и толпится там</p>
         </li>
       </ul>
     </section>
 
     <section class="search">
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <button class="button button-search" type="button">Поиск гостиницы в Седоне</button>
+      <h2 class="search__title">Заинтересовались?</h2>
+      <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <button class="search__button" type="button">Поиск гостиницы в Седоне</button>
       <!-- Здесь будет форма -->
     </section>
 
     <section class="map">
       <h2 class="visually-hidden">Карта города Седона</h2>
-      <img src="img/map.jpg" width="100" height="100" alt="Карта города Седона">
+      <img class="map__image" src="img/map.jpg" width="100" height="100" alt="Карта города Седона">
     </section>
   </main>
 
   <footer class="main-footer">
-    <p class="footer-hashtag">#visitSEDONA></p>
-    <ul class="footer-social">
-      <li class="social-item social-item-tw"><a href="#">Twitter</a></li>
-      <li class="social-item social-item-fb"><a href="#">Facebook</a></li>
-      <li class="social-item social-item-yt"><a href="#">YouTube</a></li>
+    <p class="main-footer__hashtag">#visitSEDONA></p>
+    <ul class="main-footer__social socials">
+      <li class="socials__item socials__item--tw"><a href="#">Twitter</a></li>
+      <li class="socials__item socials__item--fb"><a href="#">Facebook</a></li>
+      <li class="socials__item socials__item--yt"><a href="#">YouTube</a></li>
     </ul>
-    <p class="footer-copyright">
+    <p class="main-footer__copyright">
       Website by
       <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">HTML Academy</a>
     </p>
