--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header__logo">
+      <a class="main-header__logo" href="index.html">
         <img src="img/logo.svg" width="150" height="150" alt="Логотип города Седона">
       </a>
       <ul class="site-navigation">
