--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header__logo">
-        <img src="img/logo.svg" width="150" height="150" alt="Логотип города Седона">
+      <a class="logo">
+        <img src="img/logo.svg" width="140" height="72" alt="Логотип города Седона">
       </a>
       <ul class="site-navigation">
         <li class="site-navigation__item"><a href="info.html">Информация</a></li>
@@ -80,7 +80,7 @@
 
     <section class="map">
       <h2 class="visually-hidden">Карта города Седона</h2>
-      <img class="map__image" src="img/map.jpg" width="100" height="100" alt="Карта города Седона">
+      <img class="map__image" src="img/map.jpg" width="1200" height="593" alt="Карта города Седона">
     </section>
   </main>
 
