--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
         <a class="search__type" href="#">По рейтингу</a></li>
       </p>
       <p class="search__sorting-order">
-        <a class="search__order search__order--down sorting-order--current">По убыванию</a>
+        <a class="search__order search__order--down search__order--current">По убыванию</a>
         <a class="search__order search__order--up" href="#">По возрастанию</a>
       </p>
       <ul class="search__results-list">
