--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,67 @@
 
     <section class="filters">
       <h2 class="visually-hidden">Фильтры жилья</h2>
-      <!-- Здесь будет форма -->
+      <form class="filters__form" action="https://echo.htmlacademy.ru" method="get">
+        <fieldset>
+          <legend>Инфраструктура:</legend>
+          <ul>
+            <li class="filters__option">
+              <label>
+                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="pool" checked>
+                Бассейн
+              </label>
+            </li>
+            <li class="filters__option">
+              <label>
+                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="parking">
+                Парковка
+              </label>
+            </li>
+            <li class="filters__option">
+              <label>
+                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="wi-fi">
+                Wi-Fi
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Тип Жилья:</legend>
+          <ul>
+            <li class="filters__option">
+              <label>
+                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="hotel" checked>
+                Гостиница
+              </label>
+            </li>
+            <li class="filters__option">
+              <label>
+                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="motel" checked>
+                Мотель
+              </label>
+            </li>
+            <li class="filters__option">
+              <label>
+                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="apartments" checked>
+                Апартаменты
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Стоимость в сутки (Р):</legend>
+            <label>
+              От
+              <input type="text" name="price-start" value="" placeholder="0">
+            </label>
+            <label>
+              До
+              <input type="text" name="price-end" value="" placeholder="3000">
+            </label>
+            <!-- Здесь будет ползунок-->
+        </fieldset>
+        <button class="button filters__button" type="submit">Показать</button>
+      </form>
     </section>
 
     <section class="search">
