--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
           <button class="search__calendar-picker" type="button">Выбор даты выезда</button>
         </p>
         <p>
-          <label for="amound-adults">Взрослые:</label>
-          <button class="button search__amound-adults search__amound-adults--decrease" type="button">-</button>
-          <input id="amound-adults" type="text" name="amound-adults" value="" placeholder="2">
-          <button class="button search__amound-adults search__amound-adults--increase" type="button">+</button>
+          <label for="amount-adults">Взрослые:</label>
+          <button class="button search__amount-adults search__amount-adults--decrease" type="button">-</button>
+          <input id="amount-adults" type="text" name="amount-adults" value="" placeholder="2">
+          <button class="button search__amount-adults search__amount-adults--increase" type="button">+</button>
         </p>
         <p>
-          <label for="amound-children">Дети:</label>
-          <button class="button search__amound-children search__amound-children--decrease" type="button">-</button>
-          <input id="amound-children" type="text" name="amound-children" value="" placeholder="0">
-          <button class="button search__amound-children search__amound-children--increase" type="button">+</button>
+          <label for="amount-children">Дети:</label>
+          <button class="button search__amount-children search__amount-children--decrease" type="button">-</button>
+          <input id="amount-children" type="text" name="amount-children" value="" placeholder="0">
+          <button class="button search__amount-children search__amount-children--increase" type="button">+</button>
         </p>
         <button class="search__button search__button--find" type="submit">Найти</button>
       </form>
