--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Поиск жилья в городе Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
@@ -28,22 +31,16 @@
           <legend>Инфраструктура:</legend>
           <ul>
             <li class="filters__option">
-              <label>
-                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="pool" checked>
-                Бассейн
-              </label>
+              <input class="visually-hidden filters__input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
+              <label for="filter-pool">Бассейн</label>
             </li>
             <li class="filters__option">
-              <label>
-                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="parking">
-                Парковка
-              </label>
+              <input class="visually-hidden filters__input-checkbox" type="checkbox" name="parking" id="filter-parking">
+              <label for="filter-parking">Парковка</label>
             </li>
             <li class="filters__option">
-              <label>
-                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="wi-fi">
-                Wi-Fi
-              </label>
+              <input class="visually-hidden filters__input-checkbox" type="checkbox" name="wi-fi" id="filter-wi-fi">
+              <label for="filter-wi-fi">Wi-Fi</label>
             </li>
           </ul>
         </fieldset>
@@ -51,35 +48,25 @@
           <legend>Тип Жилья:</legend>
           <ul>
             <li class="filters__option">
-              <label>
-                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="hotel" checked>
-                Гостиница
-              </label>
+              <input class="visually-hidden filters__input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
+              <label for="filter-hotel">Гостиница</label>
             </li>
             <li class="filters__option">
-              <label>
-                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="motel" checked>
-                Мотель
-              </label>
+              <input class="visually-hidden filters__input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
+              <label for="filter-motel">Мотель</label>
             </li>
             <li class="filters__option">
-              <label>
-                <input class="visually-hidden filters__input-checkbox" type="checkbox" name="apartments" checked>
-                Апартаменты
-              </label>
+              <input class="visually-hidden filters__input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
+              <label for="filter-apartments">Апартаменты</label>
             </li>
           </ul>
         </fieldset>
         <fieldset>
           <legend>Стоимость в сутки (Р):</legend>
-            <label>
-              От
-              <input type="text" name="price-start" value="" placeholder="0">
-            </label>
-            <label>
-              До
-              <input type="text" name="price-end" value="" placeholder="3000">
-            </label>
+            <label for="filter-price-start">От</label>
+            <input type="text" name="price-start" id="filter-price-start" value="" placeholder="0">
+            <label for="filter-price-end">До</label>
+            <input type="text" name="price-end" id="filter-price-end" value="" placeholder="3000">
             <!-- Здесь будет ползунок-->
         </fieldset>
         <button class="button filters__button" type="submit">Показать</button>
