--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Отдых в городе Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
@@ -111,7 +114,7 @@
   <footer class="main-footer">
     <p class="main-footer__hashtag">#visitSEDONA></p>
     <ul class="main-footer__social socials">
-      <li class="socials__item socials__item--tw"><a href="#" >Twitter</a></li>
+      <li class="socials__item socials__item--tw"><a href="#">Twitter</a></li>
       <li class="socials__item socials__item--fb"><a href="#">Facebook</a></li>
       <li class="socials__item socials__item--yt"><a href="#">YouTube</a></li>
     </ul>
