Сделал базовую стилизацию проекта
Переписал разметку блока promo и features, имена классов в разделе премеществ в index.html.  Дополнил разметку catalog.html. Сделал базовую стилизацию

--- a/catalog.html
+++ b/catalog.html
@@ -14,9 +14,9 @@
         <img src="img/logo.svg" width="140" height="72" alt="Логотип города Седона">
       </a>
       <ul class="site-navigation">
-        <li class="site-navigation__item"><a href="info.html">Информация</a></li>
-        <li class="site-navigation__item"><a href="media.html">Фото и видео</a></li>
-        <li class="site-navigation__item"><a href="map.html">Карта штата</a></li>
+        <li class="site-navigation__item"><a href="#">Информация</a></li>
+        <li class="site-navigation__item"><a href="#">Фото и видео</a></li>
+        <li class="site-navigation__item"><a href="#">Карта штата</a></li>
         <li class="site-navigation__item site-navigation__item--current"><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
@@ -90,7 +90,7 @@
         <li class="search__result result-item">
           <img class="result-item__img" src="img/hotel-small-1.jpg" width="135" height="90" alt="Гостиница Amara Resort & Spa">
           <div class="result-item__info">
-            <h3 class="result-item__lodging-name">Amara Resort & Spa</h3>
+            <h3 class="result-item__lodging-name"><a href="#">Amara Resort & Spa</a></h3>
             <p>
               <span class="result-item__lodging-type">Гостиница</span>
               <span class="result-item__lodging-price">от 4000 р.</span>
@@ -101,14 +101,16 @@
             </p>
           </div>
           <div class="result-item__rating">
-            <p class="result-item__rating-level result-item__rating-level--good">4 звезды</p>
+            <p class="result-item__rating-level result-item__rating-level--good">
+              <span class="visually-hidden">4 звезды</span>
+            </p>
             <p class="result-item__rating-info">Рейтинг: 8,5</p>
           </div>
         </li>
         <li class="search__result result-item">
           <img class="result-item__img" src="img/hotel-small-2.jpg" width="135" height="90" alt="Мотель Desert Quail Inn">
           <div class="result-item__info">
-            <h3 class="result-item__lodging-name">Desert Quail Inn</h3>
+            <h3 class="result-item__lodging-name"><a href="#">Desert Quail Inn</a></h3>
             <p>
               <span class="result-item__lodging-type">Мотель</span>
               <span class="result-item__lodging-price">от 3000 р.</span>
@@ -119,14 +121,16 @@
             </p>
           </div>
           <div class="result-item__rating">
-            <p class="result-item__rating-level result-item__rating-level--average">3 звезды</p>
+            <p class="result-item__rating-level result-item__rating-level--average">
+              <span class="visually-hidden">3 звезды</span>
+            </p>
             <p class="result-item__rating-info">Рейтинг: 8,9</p>
           </div>
         </li>
         <li class="search__result result-item">
           <img class="result-item__img" src="img/hotel-small-3.jpg" width="135" height="90" alt="Апартаменты Villas at Poco Diablo">
           <div class="result-item__info">
-            <h3 class="result-item__lodging-name">Villas at Poco Diablo</h3>
+            <h3 class="result-item__lodging-name"><a href="#">Villas at Poco Diablo</a></h3>
             <p>
               <span class="result-item__lodging-type">Апартаменты</span>
               <span class="result-item__lodging-price">от 2000 р.</span>
@@ -137,7 +141,9 @@
             </p>
           </div>
           <div class="result-item__rating">
-            <p class="result-item__rating-level result-item__rating-level--bad">2 звезды</p>
+            <p class="result-item__rating-level result-item__rating-level--bad">
+              <span class="visually-hidden">2 звезды</span>
+            </p>
             <p class="result-item__rating-info">Рейтинг: 9,2</p>
           </div>
         </li>
