Улучшил стили сетки, убрал лишние обёртки
Значения, не кратные 5, брал с макета, некоторые выверял уже по PerfectPixel

--- a/index.html
+++ b/index.html
@@ -37,42 +37,38 @@
           <p class="item-feature__number">— №1 —</p>
           <p class="item-feature__description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </li>
-        <div class="feature-columns">
-          <li class="features__item item-feature item-feature--sub item-feature--house">
-            <h3 class="item-feature__name">Жильё</h3>
-            <p class="item-feature__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="features__item item-feature item-feature--sub item-feature--food">
-            <h3 class="item-feature__name">Еда</h3>
-            <p class="item-feature__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="features__item item-feature item-feature--sub item-feature--souvenir">
-            <h3 class="item-feature__name">Сувениры</h3>
-            <p class="item-feature__description">Не только китайского, но и местного производства!</p>
-          </li>
-        </div>
+        <li class="features__item item-feature item-feature--sub item-feature--house">
+          <h3 class="item-feature__name">Жильё</h3>
+          <p class="item-feature__description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </li>
+        <li class="features__item item-feature item-feature--sub item-feature--food">
+          <h3 class="item-feature__name">Еда</h3>
+          <p class="item-feature__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="features__item item-feature item-feature--sub item-feature--souvenir">
+          <h3 class="item-feature__name">Сувениры</h3>
+          <p class="item-feature__description">Не только китайского, но и местного производства!</p>
+        </li>
         <li class="features__item item-feature item-feature--detailed item-feature--bridge">
           <h3 class="item-feature__name">Там есть<br> Мост дьявола</h3>
           <p class="item-feature__number">— №2 —</p>
           <p class="item-feature__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </li>
-        <div class="feature-columns">
-          <li class="features__item item-feature item-feature--brief">
-            <h3 class="item-feature__name">Небольшая<br> площадь</h3>
-            <p class="item-feature__number">— №3 —</p>
-            <p class="item-feature__description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="features__item item-feature item-feature--brief">
-            <h3 class="item-feature__name">Красивая<br> дорога</h3>
-            <p class="item-feature__number">— №4 —</p>
-            <p class="item-feature__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="features__item item-feature item-feature--brief">
-            <h3 class="item-feature__name">Мало<br> туристов</h3>
-            <p class="item-feature__number">— №5 —</p>
-            <p class="item-feature__description">Большинство едет в гранд каньон и толпится там</p>
-          </li>
-        </div>
+        <li class="features__item item-feature item-feature--brief">
+          <h3 class="item-feature__name">Небольшая<br> площадь</h3>
+          <p class="item-feature__number">— №3 —</p>
+          <p class="item-feature__description">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="features__item item-feature item-feature--brief">
+          <h3 class="item-feature__name">Красивая<br> дорога</h3>
+          <p class="item-feature__number">— №4 —</p>
+          <p class="item-feature__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="features__item item-feature item-feature--brief">
+          <h3 class="item-feature__name">Мало<br> туристов</h3>
+          <p class="item-feature__number">— №5 —</p>
+          <p class="item-feature__description">Большинство едет в гранд каньон и толпится там</p>
+        </li>
       </ul>
     </section>
 
@@ -118,7 +114,7 @@
   </main>
 
   <footer class="main-footer">
-    <p class="main-footer__hashtag">#visitSEDONA></p>
+    <p class="main-footer__hashtag">#visitSEDONA</p>
     <ul class="main-footer__social socials">
       <li class="socials__item socials__item--tw"><a href="#">Twitter</a></li>
       <li class="socials__item socials__item--fb"><a href="#">Facebook</a></li>
