:heavy_check_mark: Сборка #6

--- a/6/catalog.html
+++ b/6/catalog.html
@@ -82,9 +82,9 @@
         <p class="search-results__found">Найдено: 3</p>
         <p class="search-results__sorting-type">
           Сортировка:
-          <a class="search-results__type search-results__type--current">По цене</a></li>
-          <a class="search-results__type" href="#">По типу</a></li>
-          <a class="search-results__type" href="#">По рейтингу</a></li>
+          <a class="search-results__type search-results__type--current">По цене</a>
+          <a class="search-results__type" href="#">По типу</a>
+          <a class="search-results__type" href="#">По рейтингу</a>
         </p>
         <p class="search-results__sorting-order">
           <a class="search-results__order search-results__order--down search-results__order--current">По убыванию</a>
@@ -157,7 +157,7 @@
   </main>
 
   <footer class="main-footer">
-    <p class="main-footer__hashtag">#visitSEDONA></p>
+    <p class="main-footer__hashtag">#visitSEDONA</p>
     <ul class="main-footer__social socials">
       <li class="socials__item socials__item--tw"><a href="#">Twitter</a></li>
       <li class="socials__item socials__item--fb"><a href="#">Facebook</a></li>
